--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
